# mygame

./: CMakeLists.txt  IComponent.h  IComponent.h.gch  Makefile  compile_commands.json  main.cpp  math.h  mygame  transform.cpp  transform.h  vec.h  vec2.h
Core/: AbstractController.cpp  AbstractController.h  CMakeLists.txt  Makefile  core.cpp  core.h  debug.cpp  debug.h
PhysEngine/: AABB.h  Makefile  PhysEngine.cpp  PhysEngine.h
RenderEngine/: Makefile  RenderEngine.h
include/Core/: Core.h  debug.h  typesprivate.h
include/myGUI/: RenderWidget.h  button.h  widget.h
include/utils/: message.h  utils.h
myGUI/: CMakeLists.txt  Makefile  RenderWidget.cpp  RenderWidget.h  button.cpp  button.h  widget.cpp  widget.h
temp/: a.out  main.cpp  test.cpp
utils/: enumclass.h
